# 104P

./: README.md
104Algo/: .gitignore  CMakeLists.txt  distance_transform.cpp  fast_math.cpp  field_operations.cpp  filtering.cpp  gaussian_weights.cpp  interpolation.cpp  lut_math.cpp  sampling.cpp  warping.cpp  zach_TVL1_optical_flow.cpp
104Algo/include/: distance_transform.h  fast_math.h  field_operations.h  filtering.h  gaussian_weights.h  interpolation.h  lut_math.h  sampling.h  warping.h  zach_TVL1_optical_flow.h
104Core/: .gitignore  CMakeLists.txt  composite_image_mask.cpp.TBD  filtering.cpp  image.hpp  mask.cpp  mask_iterator.cpp  mask_sequence.cpp  optical_flow_io.cpp  patch.cpp  point.cpp  sequence.hpp  shape.cpp
104Core/include/: composite_image_mask.h.TBD  distance_transform.h  gaussian_weights.h  i_iterable_mask.h  i_watchdog.h  image.h  interpolation.h  io_utility.h  mask.h  mask_sequence.h  patch.h  point.h  range_parameter.h  sampling.h  sequence.h  shape.h
104IO/: CMakeLists.txt  color_code.cpp  console_utility.cpp  intensity_code.cpp  io_utility.cpp  optical_flow_container.cpp  optical_flow_io.cpp  visualization.cpp
104IO/include/: color_code.h  console_utility.h  i_optical_flow_code.h  intensity_code.h  io_utility.h  optical_flow_io.h  visualization.h
104Param/: CMakeLists.txt  range_parameter.cpp
104Param/include/: i_list_parameter.h  i_parameter.h  i_parameterizable.h  i_range_parameter.h  list_parameter.h  range_parameter.h
104Test/: CMakeLists.txt
104Test/core_tests/: CMakeLists.txt  main.cpp  test_image.cpp
104UI/: CMakeLists.txt  background_worker.cpp  descriptor.cpp  flow_color_coding.cpp  hull.cpp  hull_proxy.cpp  image_viewer.cpp  interaction_manager.cpp  layer.cpp  layer_manager.cpp  layer_manager.hpp  mask_group.cpp  mask_module.cpp  numerical_entry.cpp  optical_flow_module.cpp  painter.cpp  parameters_ui_builder.cpp  point_picker.cpp  rectangular_selection.cpp  rectangular_selection_layer.cpp  selection_interaction.cpp  signal_watchdog.cpp  ui_container.cpp  view.cpp
104UI/icons/: icon_point_selection_24.h  icon_rectangular_selection.h
104UI/include/: background_worker.h  descriptor.h  fitting.h  flow_color_coding.h  hull.h  hull_proxy.h  i_background_insider.h  i_background_worker.h  i_data.h  i_hull.h  i_mask_aware.h  i_mask_provider.h  i_modulable.h  i_module.h  i_module_manager.h  i_optical_flow_aware.h  i_optical_flow_provider.h  i_proxy.h  i_rig.h  i_rig_manager.h  image_viewer.h  interaction.h  interaction_manager.h  layer.h  layer_manager.h  mask_group.h  mask_module.h  mouse_event.h  numerical_entry.h  optical_flow_data.h  optical_flow_module.h  painter.h  parameters_ui_builder.h  point_picker.h  rectangular_selection.h  rectangular_selection_layer.h  request.h  request_module.h  rig.h  selection_interaction.h  (+4 more)
Algorithm/: coarse_to_fine.cpp  color_code.cpp  composite_image_mask.cpp  distance_transform.cpp  fast_march_algorithm.cpp  field_operations.cpp  filtering.cpp  gaussian_kernel.cpp  image.cpp  image_mask.cpp  intensity_code.cpp  interpolation.cpp  list_parameter.cpp  mask_iterator.cpp  optical_flow_io.cpp  optical_flow_io_legacy.cpp  patch.cpp  pgm_util.cpp  point.cpp  range_parameter.cpp  sequence.cpp  sequence_mask.cpp  shape.cpp  utility.cpp  visualization.cpp  warping.cpp  zach_TVL1_optical_flow.cpp
Algorithm/headers/: coarse_to_fine.h  composite_image_mask.h  fast_march_algorithm.h  filtering.h  gaussian_kernel.h  i_iterable_mask.h  i_list_parameter.h  i_parameter.h  i_parameterizable.h  i_range_parameter.h  image.h  image_mask.h  interpolation.h  mask_iterator.h  optical_flow_container.h  pgm_util.h  point.h  sequence.h  sequence_mask.h  shape.h  util.h  utility.h  visualization.h  zach_TVL1_optical_flow.h
Core/: coarse_to_fine.cpp  color_code.cpp  composite_image_mask.cpp  composite_image_mask.cpp.TBD  distance_transform.cpp  field_operations.cpp  filtering.cpp  gaussian_kernel.cpp  gaussian_weights.cpp  image.cpp  image.hpp  image.hpp.bak  image_mask.cpp  image_mask.cpp.bak  intensity_code.cpp  interpolation.cpp  io_utility.cpp  list_parameter.cpp  makefile  mask.cpp  mask_iterator.cpp  mask_sequence.cpp  optical_flow_io_legacy.cpp  pgm_util.cpp  point.cpp  range_parameter.cpp  sampling.cpp  sequence.cpp  sequence.hpp  sequence_mask.cpp  sequence_mask.cpp.bak  shape.cpp  utility.cpp  visualization.cpp  zach_TVL1_optical_flow.cpp
Core/include/: coarse_to_fine.h  composite_image_mask.h.TBD  distance_transform.h  field_operations.h  filtering.h  i_iterable_mask.h  image.h  image.h.bak  image_mask.h  io_utility.h  list_parameter.h  mask.h  mask_iterator.h  mask_sequence.h  patch.h  pgm_util.h  (+7 more)
GeodesicDistanceLib/: image.cpp  makefile  optical_flow_container.cpp  optical_flow_io.cpp  point.cpp  sequence.cpp  shape.cpp  util.cpp
GeodesicDistanceUI/: geodesic_distance_ui.cpp  geodesic_distance_ui.h  gtkmm Paths and Symbols import.xml  layer.cpp  layer.h  layer_manager.cpp  layer_manager.h  main.cpp  makefile  optical_flow.cpp  optical_flow.h  patch_position_layer.cpp  patch_position_layer.h  selectable_image.cpp  selectable_image.h  signal_watchdog.cpp  ui_container.h
Rethink/: base_image.hpp  image.hpp  image_mask.cpp  main.cpp  point.cpp  shape.cpp
UICore/: a_parameters_set.h  background_worker.cpp  background_worker.h  descriptor.cpp  fitting.h  hull.cpp  hull.h  hull_proxy.cpp  hull_proxy.h  i_background_worker.h  i_data.h  i_hull.h  image_viewer.cpp  image_viewer.h  interaction.h  interaction_manager.cpp  interaction_manager.h  layer.cpp  layer.h  layer_manager.cpp  layer_manager.h  layer_manager.hpp  makefile  mask_group.cpp  mask_module.cpp  mouse_event.h  numerical_entry.cpp  optical_flow.cpp  optical_flow_module.cpp  parameters_ui_builder.cpp  parameters_ui_builder.h  point_picker.cpp  point_selection.cpp  rectangular_selection.cpp  rig.h  selectable_image.cpp  selectable_image.h  selection_interaction.cpp  ui_container.cpp  ui_container.h  (+1 more)
uml/: affine_invariant.uml  background_work.uml  hull_rig_interaction.uml  packages.uml  packages_vision.uml  packages_vision2.uml  parameterization.uml
(+69 files in other folders)
